add notes for lecture 7

--- a/homeworks/challenger.ipynb
+++ b/homeworks/challenger.ipynb
@@ -297,7 +297,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) \n",
     "warnings.filterwarnings(\"ignore\", category=FutureWarning) \n",
-    "data = pd.read_csv(\"data/shuttle.csv\")\n",
+    "data = pd.read_csv(\"../data/shuttle.csv\")\n",
     "data"
    ]
   },
@@ -662,7 +662,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"data/shuttle.csv\")\n",
+    "data = pd.read_csv(\"../data/shuttle.csv\")\n",
     "print(np.sum(data.Malfunction)/np.sum(data.Count))"
    ]
   },
@@ -733,7 +733,7 @@
    ],
    "source": [
     "# Reload data\n",
-    "data = pd.read_csv(\"data/shuttle.csv\")\n",
+    "data = pd.read_csv(\"../data/shuttle.csv\")\n",
     "#Graphical inspection\n",
     "data[\"Frequency\"]=data.Malfunction/data.Count\n",
     "_, axs = plt.subplots(1, 2, figsize=(15, 5))\n",
