--- a/homeworks/batman.Rmd
+++ b/homeworks/batman.Rmd
@@ -44,13 +44,14 @@ ggplot(phyto, aes(x=BOW, y=BRW)) + geom_point() + geom_smooth(method="lm") +
   theme(plot.title = element_text(size=12))
 ```
 
-With this expression, R estimates the $\beta$ coefficients of the formula $Y = \beta_1 + \beta_2X + \epsilon$, where $X$ is the vector containing the values of the measured body masses and $Y$ contains the measured brain weights. $\epsilon$ is random noise.
+With this expression, R estimates the $\beta$ coefficients of the formula $Y = \beta_0 + \beta_1X + \epsilon$, where $X$ is the vector containing the values of the measured body masses and $Y$ contains the measured brain weights. $\epsilon$ is random noise.
 
 ```{r}
 summary(reg1)
 ```
 
 In this case, a few results can be observed:
+
 - The intercept $\beta_1$ is estimated as 623.45.
 - The p-value for the employed test statistics is extremely small, lower than 2.2e-16.
 - The null hypothesis of this test is $H_0 : \beta_1 = \beta_2 = 0$. This hypothesis is therefore rejected.
@@ -113,6 +114,7 @@ par(mfcol=c(2,2))
 plot(reg2)
 ```
 Important differences can be noticed:
+
 - The plots related to residuals vs fitted and scale-location are more "flat" for the second model, so it provides more accurate predictions than the first one.
 - According to the Q-Q plot, it is more probable that the data used to fit the second model are drawn from a normal distribution, with respect to the first model.
 
@@ -121,11 +123,36 @@ Therefore, the second model better satisfies common assumptions of linear regres
 
 ## Study of the contribution to the total weight of each part of the brain
 
-Preivous analysis can be expanded, using other variables (related to brain parts) to explain brain weight. The possible explanatory variables are AUD (auditory nuclei volume)
+Preivous analysis can be expanded, using other variables (related to brain parts) to explain brain weight. The possible explanatory variables are AUD (auditory nuclei volume), MOB (main olfactory bulb volume) and HIP (hippocampus volume).
 
 ```{r out.width="80%", fig.align = "center"}
 phytoNum <- phyto[, c(4:8)]
 mat.cor <- cor(phytoNum)
 corrplot(mat.cor, type="upper")
+```
+
+We see high positive correlation in the couples, for example, (BOW, BRW) and (MOB, HIP), while the AUD variable is not particularly correlated with any other. Let's statistically analyse the correlation between some variables, using the Pearson test.
+
+```{r}
+cor.test(phyto$BRW, phyto$HIP)
+cor.test(phyto$BRW, phyto$MOB)
+cor.test(phyto$BRW, phyto$AUD)
+```
+
+Resulting p-values are very low if BRW is tested against HIP and MOB, while it is bigger (0.003) against AUD. What is shown in the previous figure is confirmed: correlation is important with HIP and MOB, less with AUD.
+
+```{r}
+regm <- lm(BRW ~ AUD + MOB + HIP, data=phytobis)
+summary(regm)
+anova(regm)
+```
+
+The estimated model predicts the $\beta$ coefficient of the regression model $Y = \beta_0 + \beta_1X_1 + \beta_2X_2 + \beta_3X_3$, where $Y$ is the BRW variable and $X_1$, $X_2$ and $X_3$ are AUD, MOB and HIP respectively. The objective is therefore to predict the brain mass of a bat from the volumes of its auditory nuclei, main olfactory bulb and hyppocampus. Theoretically, they may all have an impact on the brain mass, even though the main olfactory bulb can be present in the bat's nose and not in its brain.
+
+The coefficient associated to the three variables are, respectively, 47.989, -2.444 and 15.981. The coefficient related to MOB is not significative, showing a high p-value, and could therefore be removed from the analysis.
+
+```{r}
+reg0 <- lm(BRW ~ 1, data=phyto)
+step(reg0, scope=BRW ~ AUD + MOB + HIP, direction="forward")
 ```
 
